--- a/BookListRazor/appsettings.json
+++ b/BookListRazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.102.85;Integrated Security = false;User id=sa;password=1qaz2wsx#EDC;Database=BookListRazor20190519;Trusted_Connection=false;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=;Integrated Security = false;User id=;password=;Database=BookListRazor20190519;Trusted_Connection=false;MultipleActiveResultSets=True"
   },
 
   "Logging": {
